The classes have been created

--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ body{
     font-size:13px;
     line-height: 20px;
     opacity: 70%;
-    /* border: 2px solid black; */
     padding-left: 25px;
-    padding-right: 35px;
+    padding-right: 70px;
     margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 
